[FEAT] backend: add address and endpoints
